# beach-cli

./: .gitignore  Cargo.toml  Makefile  README.md  install.sh  state.json
.github/workflows/: ci.yml  release.yml
docs/plans/: 2026-01-30-v0.2-implementation.md  2026-01-30-v0.2-redesign-design.md
docs/specs/: ADR.md  PRD.md  TECHNICAL_DESIGN.md  WIREFRAMES.md
docs/specs/best-time-feature/: ADR.md  PRD.md  TECHNICAL_DESIGN.md  WIREFRAMES.md
docs/tasks/: 001-dynamic-sunset-scorer.md  001-project-setup.md  002-data-models.md  002-filter-past-hours.md  003-beach-definitions.md  003-best-times-passed-message.md  004-cache-manager.md  005-weather-client.md  006-tides-client.md  007-water-quality-client.md  008-app-state.md  009-beach-list-ui.md  010-beach-detail-ui.md  011-main-integration.md  012-activity-types.md  013-hourly-weather.md  014-tide-interpolation.md  015-crowd-heuristics.md  016-scoring-engine.md  017-app-state.md  018-beach-detail-ui.md  019-list-hints.md  020-plan-screen.md  021-cli-args.md  101-hourly-forecast-data-model.md  102-weather-api-hourly-parsing.md  103-app-state-scroll-toggle.md  104-vertical-layout-refactor.md  105-scroll-support.md  106-fullwidth-tide-sparkline.md  107-expanded-tide-chart.md  108-hourly-forecast-section.md  109-integration-tests.md
src/: activities.rs  app.rs  cli.rs  crowd.rs  lib.rs  main.rs  refresh.rs
src/cache/: manager.rs  mod.rs
src/data/: beach.rs  mod.rs  tides.rs  water_quality.rs  weather.rs
src/ui/: beach_detail.rs  beach_list.rs  help_overlay.rs  mod.rs  plan_trip.rs
tests/: cli_args.rs
(+9 files in other folders)
